@@ -1,16 +1,21 @@
 package university.innopolis.controller;
 
 import jakarta.validation.Valid;
+import java.util.List;
+import java.util.Map;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import university.innopolis.dto.EventResponse;
 import university.innopolis.dto.ParticipantRequest;
 import university.innopolis.dto.ParticipantResponse;
 import university.innopolis.entity.Participant;
-import university.innopolis.entity.ParticipantEvent;
 import university.innopolis.service.ParticipantService;
-import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/participants")
@@ -38,11 +43,26 @@ public class ParticipantController {
         var events = service.getParticipantEvents(participantId);
         return events.stream()
                 .map(EventResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @DeleteMapping("/{participantId}/unregister/{eventId}")
     public void unregister(@PathVariable Long participantId, @PathVariable Long eventId) {
         service.deleteRegistration(participantId, eventId);
+    }
+
+    @PostMapping("/send-code")
+    public ResponseEntity<Void> sendVerificationCode(@RequestBody Map<String, String> payload) {
+        String email = payload.get("email");
+        service.sendVerificationCode(email);
+        return ResponseEntity.ok().build();
+    }
+
+    @PostMapping("/verify-code")
+    public ResponseEntity<Map<String, Boolean>> verifyCode(@RequestBody Map<String, String> payload) {
+        String email = payload.get("email");
+        String code = payload.get("code");
+        boolean success = service.verifyCode(email, code);
+        return ResponseEntity.ok(Map.of("success", success));
     }
 }
