@@ -1,5 +1,6 @@
 package university.innopolis.service;
 
+import lombok.RequiredArgsConstructor;
 import university.innopolis.entity.Event;
 import university.innopolis.entity.Participant;
 import university.innopolis.entity.ParticipantEvent;
@@ -11,14 +12,10 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class EventService {
     private final EventRepository eventRepository;
     private final ParticipantEventRepository participantEventRepository;
-
-    public EventService(EventRepository repo, ParticipantEventRepository participantEventRepository) {
-        this.eventRepository = repo;
-        this.participantEventRepository = participantEventRepository;
-    }
 
     public Event createEvent(Event event) {
         return eventRepository.save(event);
@@ -32,10 +29,14 @@ public class EventService {
         eventRepository.deleteById(id);
     }
 
+    public Event getEvent(Long id) {
+        return eventRepository.getReferenceById(id);
+    }
+
     public List<Participant> getParticipants(Long eventId) {
         List<ParticipantEvent> participantEvents = participantEventRepository.findByEventId(eventId);
         return participantEvents.stream()
                 .map(ParticipantEvent::getParticipant)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
